@@ -1,6 +1,8 @@
-Make Stack more flexible, it's a fixed-length array.
+Make key for going to periscope depth
+Let player know when they are hit by torpedo.
+
 
 AI stuff
   Warships should hunt origins of torpedoes
-
+  Launch torpedo distance should vary a little.
 
